# prompts

./: .gitignore  README.md
python/: README.md  pyproject.toml
python/helicone_prompts/: __init__.py  auto_fill.py  object_parser.py  object_version_checking.py  prompts.py
python/helicone_prompts/tests/: __init__.py  test_auto_fill.py  test_object_parser.py  test_object_version_checking.py  test_prompts.py
typescript/: README.md  package-lock.json  package.json  tsconfig.json
typescript/src/: fillInputs.ts  index.ts  objectParser.ts  objectVersionChecking.ts
typescript/tests/: hpstatic.test.ts  index.test.ts  object.test.ts  place-variables.test.ts  remove-auto-versions.test.ts  version.test.ts
